--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body>
 		<nav class="navbar navbar-default" role="navigation">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle visible-xs" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+				<button type="button" class="navbar-toggle visible-xs hidden-sm hidden-md hidden-lg" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
