--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body>
 		<nav class="navbar navbar-default" role="navigation">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle visible-xs hidden-sm hidden-md hidden-lg" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+				<button type="button" class="navbar-toggle visible-xs" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -21,7 +21,7 @@
 				<p class="navbar-brand">Food, LLC</p>
 			</div>
 			<div class="collapse navbar-collapse navbar-ex1-collapse">
-				<ul class="nav navbar-nav hidden-sm hidden-md">
+				<ul class="nav navbar-nav hidden-lg hidden-sm hidden-md">
 					<li><a href="#chicken">Chicken</a></li>
 					<li><a href="#beef">Beef</a></li>
 					<li><a href="#sushi">Sushi</a></li>
